source/blender/compositor/realtime_compositor/shaders/infos/compositor_cryptomatte_info.hh
@@ -6,6 +6,7 @@
 
 GPU_SHADER_CREATE_INFO(compositor_cryptomatte_pick)
     .local_group_size(16, 16)
+    .push_constant(Type::IVEC2, "lower_bound")
     .sampler(0, ImageType::FLOAT_2D, "first_layer_tx")
     .image(0, GPU_RGBA32F, Qualifier::WRITE, ImageType::FLOAT_2D, "output_img")
     .compute_source("compositor_cryptomatte_pick.glsl")
@@ -13,6 +14,7 @@ GPU_SHADER_CREATE_INFO(compositor_cryptomatte_pick)
 
 GPU_SHADER_CREATE_INFO(compositor_cryptomatte_matte)
     .local_group_size(16, 16)
+    .push_constant(Type::IVEC2, "lower_bound")
     .push_constant(Type::INT, "identifiers_count")
     .push_constant(Type::FLOAT, "identifiers", 32)
     .sampler(0, ImageType::FLOAT_2D, "layer_tx")
