source/blender/nodes/composite/nodes/node_composite_cryptomatte.cc
@@ -238,6 +238,13 @@ class BaseCryptoMatteOperation : public NodeOperation {
   /* Should returns all the Cryptomatte layers in order. */
   virtual Vector<GPUTexture *> get_layers() = 0;
 
+  /* If only a subset area of the Cryptomatte layers is to be considered, this method should return
+   * the lower bound of that area. The upper bound will be derived from the operation domain. */
+  virtual int2 get_layers_lower_bound()
+  {
+    return int2(0);
+  }
+
   void execute() override
   {
     Vector<GPUTexture *> layers = get_layers();
@@ -297,6 +304,9 @@ class BaseCryptoMatteOperation : public NodeOperation {
     GPUShader *shader = context().get_shader("compositor_cryptomatte_pick", ResultPrecision::Full);
     GPU_shader_bind(shader);
 
+    const int2 lower_bound = this->get_layers_lower_bound();
+    GPU_shader_uniform_2iv(shader, "lower_bound", lower_bound);
+
     GPUTexture *first_layer = layers[0];
     const int input_unit = GPU_shader_get_sampler_binding(shader, "first_layer_tx");
     GPU_texture_bind(first_layer, input_unit);
@@ -341,6 +351,8 @@ class BaseCryptoMatteOperation : public NodeOperation {
     GPUShader *shader = context().get_shader("compositor_cryptomatte_matte");
     GPU_shader_bind(shader);
 
+    const int2 lower_bound = this->get_layers_lower_bound();
+    GPU_shader_uniform_2iv(shader, "lower_bound", lower_bound);
     GPU_shader_uniform_1i(shader, "identifiers_count", identifiers.size());
     GPU_shader_uniform_1f_array(shader, "identifiers", identifiers.size(), identifiers.data());
 
@@ -654,13 +666,28 @@ class CryptoMatteOperation : public BaseCryptoMatteOperation {
     return std::string(type_name);
   }
 
+  int2 get_layers_lower_bound() override
+  {
+    switch (get_source()) {
+      case CMP_NODE_CRYPTOMATTE_SOURCE_RENDER: {
+        const rcti compositing_region = this->context().get_compositing_region();
+        return int2(compositing_region.xmin, compositing_region.ymin);
+      }
+      case CMP_NODE_CRYPTOMATTE_SOURCE_IMAGE:
+        return int2(0);
+    }
+
+    BLI_assert_unreachable();
+    return int2(0);
+  }
+
   /* The domain should be centered with the same size as the source. In case of invalid source,
    * fallback to the domain inferred from the input. */
   Domain compute_domain() override
   {
     switch (get_source()) {
       case CMP_NODE_CRYPTOMATTE_SOURCE_RENDER:
-        return Domain(context().get_render_size());
+        return Domain(context().get_compositing_region_size());
       case CMP_NODE_CRYPTOMATTE_SOURCE_IMAGE:
         return compute_image_domain();
     }
